@@ -1433,6 +1433,7 @@ void serverMainThreadExit(int retcode)
   wzd_cache_purge();
   server_clear_param(&mainConfig->param_list);
   hook_free(&mainConfig->hook);
+  hook_free_protocols();
   module_free(&mainConfig->module);
   backend_close(mainConfig->backend.name);
   cronjob_free(&crontab);
